<resources>
    <string name="app_name">Adopet</string>
    <string name="title_activity_menu_utama">Menu_utama</string>
    <string name="adopet">ADOPet</string>
    <string name="username">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="gambar">gambar</string>
    <string name="daftar">Daftar</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="email_anda">Email Anda</string>
    <string name="no_whatsapp">No Whatsapp</string>
    <string name="pilih_provinsi">Pilih Provinsi</string>
    <string name="pilih_kabupaten_kota">Pilih Kabupaten/Kota</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="cari">Cari</string>
    <string name="pet">Pet</string>
    <string name="akun">Akun</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="hallo">Hallo,</string>
    <string name="adopet123">Adopet123</string>
    <string name="sudah_siap_mencari_hewan_lucu_hari_ini">Sudah siap mencari hewan lucu hari ini?</string>
    <string name="kategori">Kategori</string>
    <string name="anjing">Anjing</string>
    <string name="kucing">Kucing</string>
    <string name="semua">Semua</string>
    <string name="spesifikasi">Spesifikasi</string>
    <string name="vaksin">Vaksin</string>
    <string name="steril">Steril</string>
    <string name="informasi_data_diri">INFORMASI DATA DIRI</string>
    <string name="email">Email</string>
    <string name="ardhanaryatama_gmail_com">ardhanaryatama@gmail.com</string>
    <string name="_089861112233">089865715534</string>
    <string name="provinsi">Provinsi</string>
    <string name="jawa_barat">Jawa Barat</string>
    <string name="kota_bandung">Kota Bandung</string>
    <string name="kabupaten_kota">Kabupaten/Kota</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="muhammad_ardhan_aryatama">Muhammad Ardhan Aryatama</string>
    <string name="lihat_profil_anda">Lihat Profil Anda</string>
    <string name="ubah_data_diri">Ubah Data Diri</string>
    <string name="ubah_katasandi">Ubah Kata Sandi</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string name="silahkan">SILAHKAN</string>
    <string name="ubah_data_yang_ingin_diubah">Ubah Data Yang Ingin Diubah</string>
    <string name="simpan">Simpan</string>
    <string name="masukkan_kata_sandi_lama_anda">Masukkan Kata Sandi Lama Anda</string>
    <string name="rocky">Rocky</string>
    <string name="dipatiukur">Dipatiukur,</string>
    <string name="bandung">Bandung</string>
</resources>
