<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.adopet.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cari"
        android:name="com.example.adopet.ui.cari.CariFragment"
        android:label="@string/cari"
        tools:layout="@layout/fragment_cari"/>

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.example.adopet.ui.store.StoreFragment"
        android:label="@string/store"
        tools:layout="@layout/fragment_store"/>

    <fragment
        android:id="@+id/navigation_pet"
        android:name="com.example.adopet.ui.pet.PetFragment"
        android:label="@string/pet"
        tools:layout="@layout/fragment_pet"/>

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.example.adopet.ui.akun.AkunFragment"
        android:label="@string/akun"
        tools:layout="@layout/fragment_akun"/>
</navigation>