<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp">
    <TextView
        android:id="@+id/txthallo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/hallo" />

    <TextView
        android:id="@+id/txtNamaPengguna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/txthallo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/adopet123" />

    <TextView
        android:id="@+id/kt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txthallo"
        android:textColor="@color/black"
        android:text="@string/sudah_siap_mencari_hewan_lucu_hari_ini"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rchome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/kt1"
        android:layout_marginTop="20dp" />
    </RelativeLayout>
</ScrollView>