<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PengaturanAkun">
    <LinearLayout
        android:id="@+id/lnprofil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/bgwhite">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:src="@mipmap/ic_launcher_round"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/muhammad_ardhan_aryatama"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lihat_profil_anda"/>
        </LinearLayout>
    </LinearLayout>
            <LinearLayout
                android:id="@+id/lnubahdatadiri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bgwhite"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:focusable="true"
                android:clickable="true">
                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="15dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_user"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/ubah_data_diri"
                    android:textColor="@color/black"
                    android:layout_marginEnd="15dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lnubahkatasandi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bgwhite"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:focusable="true"
                android:clickable="true">
                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="15dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_lock"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/ubah_katasandi"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lnkeluarakun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bgwhite"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:focusable="true"
                android:clickable="true">
                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="15dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_logout"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/keluar_akun"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
    </LinearLayout>